# digger

./: .gitignore  CMakeLists.txt  CPackConfig.cmake.in  README  config.h.cmake.in  diggerConfig.cmake.in  diggerConfigVersion.cmake.in
contrib/vs/: digger.sln  digger.vcxproj
contrib/vs2010/: digger.sln  digger.vcxproj  digger.vcxproj.filters
doc/: digger.txt
src/: CMakeLists.txt  Makefile.fbsd  Makefile.sdl  def.h  digger.c  digger.h  drawing.c  ini.c  input.c  input.h  main.c  main.h  newsnd.c  newsnd.h  record.c  record.h  scores.c  scores.h  sound.c  sound.h  title_gz.c  title_gz.h
src/fbsd/: fbsd_kbd.c  fbsd_sup.c  fbsd_sup.h  fbsd_timer.c  fbsd_vid.c
src/sdl/: sdl_kbd.c  sdl_snd.c  sdl_timer.c  sdl_vid.c
